--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   artifact_gen:
-    name: "Artifact Generation"
+    name: "Artifact generate and upload"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,16 +15,6 @@ jobs:
         with:
           python-version: "3.10"
       - run: python main.py
-
-  artifact_upload:
-    name: "Artifact Upload"
-    needs: artifact_gen
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
       - uses: actions/upload-artifact@v4
         with:
           name: "identities"
